--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@popperjs/core": "^2.11.6",
+    "@ubiipagos/boton-ubii": "^2.2.1",
     "ag-grid-angular": "^28.1.0",
     "ag-grid-community": "^28.1.0",
     "ag-grid-enterprise": "^28.1.3",
