--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ag-grid-enterprise": "^28.1.3",
     "angular": "^1.8.3",
     "angular-chartist.js": "^5.0.0-beta.1",
+    "angular-ng-autocomplete": "^2.0.12",
     "bootstrap": "^5.2.0",
     "bootstrap-notify": "^3.1.3",
     "chartist": "^1.1.2",
