--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "rxjs": "~6.5.5",
     "sequelize": "^6.21.4",
     "tslib": "^2.4.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.7"
   },
   "devDependencies": {
